도메인 시큐리티 허용 - 예철